--- a/WebApplication3/bundleconfig.json
+++ b/WebApplication3/bundleconfig.json
@@ -12,6 +12,7 @@
   {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
+      "wwwroot/lib/bootbox.js/bootbox.js",
       "wwwroot/js/site.js"
     ],
     // Optionally specify minification options
